2003-02-02  Martin Baulig  <martin@ximian.com>
	* wrapper/icall.c: New file.
	(Mono.Debugger.Tests.TestInternCall::Test): New interncall for
	testing purposes.

svn path=/trunk/debugger/; revision=11128

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -7,6 +7,7 @@ libexec_PROGRAMS = mono-debugger-jit-wrapper
 mono_debugger_jit_wrapper_SOURCES = \
 	main.c				\
 	thread-manager.c		\
+	icall.c				\
 	mono-debugger-jit-wrapper.h
 
 mono_debugger_jit_wrapper_LDADD = \
