--- a/configure.in
+++ b/configure.in
@@ -200,6 +200,7 @@ backends/classes/Makefile
 backends/server/Makefile
 backends/ptrace/Makefile
 backends/mono-csharp/Makefile
+backends/native/Makefile
 frontends/Makefile
 frontends/scripting/Makefile
 frontends/command-line/Makefile
