2003-03-04  Martin Baulig  <martin@ximian.com>
	* widgets/generator/Makefile.am: Only rebuild things if we're in
	maintainer mode.

	* widgets/*/generated/: Include the generated files in the
	distribution since we aren't rebuilding them in the tarballs.

svn path=/trunk/debugger/; revision=12197

--- a/widgets/Makefile.am
+++ b/widgets/Makefile.am
@@ -1,6 +1,9 @@
 SUBDIRS = sources generator gtk mono.debugger.gui
 
+if MAINTAINER_MODE
+
 api: 
 	PERLLIB=$(GTKSHARP_PREFIX)/share/perl5 PATH=$(GTKSHARP_PREFIX)/bin:$$PATH gapi.pl gtksourceview.sources generator
 	PERLLIB=$(GTKSHARP_PREFIX)/share/perl5 PATH=$(GTKSHARP_PREFIX)/bin:$$PATH gapi.pl debuggerwidget.sources generator
 
+endif
