2003-03-05  Martin Baulig  <martin@ximian.com>
	* wrapper/wrapper.c: This file was formerly known as main.c.

	* wrapper/main.c: Moved everything but a very simple main()
	function into wrapper.c.

	* Makefile.am: Create a static libmonodebuggerwrapper.a library
	containing everything but the main().

svn path=/trunk/debugger/; revision=12220

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -2,15 +2,20 @@ INCLUDES = \
 	-DG_LOG_DOMAIN=\"MonoDebuggerJitWrapper\" \
 	@WRAPPER_CFLAGS@
 
+lib_LIBRARIES = libmonodebuggerwrapper.a
+
 libexec_PROGRAMS = mono-debugger-jit-wrapper
 
 mono_debugger_jit_wrapper_SOURCES = \
-	main.c				\
+	main.c
+
+mono_debugger_jit_wrapper_LDADD = \
+	libmonodebuggerwrapper.a	\
+	@WRAPPER_LIBS@
+
+libmonodebuggerwrapper_a_SOURCES = \
+	wrapper.c			\
 	thread-manager.c		\
 	icall.c				\
 	mono-debugger-jit-wrapper.h
-
-mono_debugger_jit_wrapper_LDADD = \
-	@WRAPPER_LIBS@
-
 
