--- a/configure.in
+++ b/configure.in
@@ -67,8 +67,9 @@ AM_CONDITIONAL(HAVE_GTK, test x$have_gtk = xyes)
 AC_MSG_CHECKING([if building the GUI is requested])
 AC_ARG_ENABLE(gui, [  --disable-gui            don't build the GUI], build_gui=$enableval, build_gui=yes)
 AC_MSG_RESULT($build_gui)
-if test x$have_gtk=xno; then
+if test "x$have_gtk" = "xno"; then
 	build_gui=no
+	AC_MSG_WARN(Building the GUI is disabled!)
 fi
 if test "x$build_gui" = "xyes"; then
 	BUILD_GTK_CFLAGS=`$PKG_CONFIG --cflags gtk+-2.0 libgnome-2.0`
