--- a/widgets/mono.debugger.gui/Makefile.am
+++ b/widgets/mono.debugger.gui/Makefile.am
@@ -6,8 +6,8 @@ ass_SCRIPTS = debugger-widgets.dll
 
 all: debugger-widgets.dll
 
-debugger-widgets.dll: generated/*.cs
-	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -r gdk-sharp.dll -o debugger-widgets.dll --recurse '*.cs'
+debugger-widgets.dll: @srcdir@/generated/*.cs
+	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -r gdk-sharp.dll -o debugger-widgets.dll --recurse '@srcdir@/*.cs'
 
 clean:
 	rm -f *.dll
