2003-03-13  Martin Baulig  <martin@ximian.com>
	* test/TestLexicalScopes.cs: New tests.  The debugger should only
	display one variable called `a' at a time.

svn path=/trunk/debugger/; revision=12486

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,7 +2,7 @@ MCS_FLAGS=-g
 
 noinst_SCRIPTS = $(test_FILES)
 
-test_FILES = TestManagedTypes.exe
+test_FILES = TestManagedTypes.exe TestLexicalScopes.cs
 
 EXTRA_DIST = @srcdir@/*.cs
 
