2003-03-22  Martin Baulig  <martin@ximian.com>
	* classes/ProcessStart.cs: Moved here from ../backends/.

	* backends/ProcessStart.cs: Moved to ../classes/.

	* frontends/scripting/DebuggerOptions.cs: New file.  Moved
	`MyOptions' from ScriptingContext.cs here, renamed it to
	DebuggerOptions and made it public.  This class handles the
	parsing of the command line arguments.

	* frontends/scripting/ScriptingContext.cs
	(ScriptingContext..ctor): Added DebuggerOptions argument.
	(ScriptingContext.Start): Return the ProcessStart, don't call Run().
	(ScriptingContext.ParseArguments): Removed.
	(ScriptingContext.Run): Call Initialize() here.

	* frontends/gui/DebuggerGUI.cs: Use the new DebuggerOptions class
	to parse the command line arguments.

svn path=/trunk/debugger/; revision=12754

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -33,6 +33,7 @@ SYMFILE_READER_SRCLIST = \
 	@top_srcdir@/lib/SymbolFileReader.cs
 
 LIBRARY_DEPS = \
+	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger
 
 BACKEND_DEPS = \
