--- a/configure.in
+++ b/configure.in
@@ -125,7 +125,7 @@ AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
 MONO_REQUIRED_VERSION=0.19.1
-PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION)
+PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION libgc-mono >= 6.1)
 AC_SUBST(WRAPPER_CFLAGS)
 AC_SUBST(WRAPPER_LIBS)
 
