Add RELEASE-NOTES-0.3.txt to the EXTRA_DIST.
svn path=/trunk/debugger/; revision=13254

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,4 +6,5 @@ endif
 
 SUBDIRS = interfaces classes glue arch backends $(gui_SUBDIRS) frontends lib wrapper test doc
 
-EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.2.2.txt README.FreeBSD
+EXTRA_DIST = RELEASE-NOTES-0.1.0.txt RELEASE-NOTES-0.2.0.txt RELEASE-NOTES-0.2.2.txt \
+	     RELEASE-NOTES-0.3.txt README.FreeBSD
