--- a/configure.in
+++ b/configure.in
@@ -124,10 +124,16 @@ PKG_CHECK_MODULES(SERVER_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
-MONO_REQUIRED_VERSION=0.19.1
+MONO_REQUIRED_VERSION=0.23
 PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION libgc-mono >= 6.1)
 AC_SUBST(WRAPPER_CFLAGS)
 AC_SUBST(WRAPPER_LIBS)
+
+MONO_REQUIRED_VERSION=0.23
+PKG_CHECK_MODULES(MINI_WRAPPER, mini >= $MONO_REQUIRED_VERSION libgc-mono >= 6.1)
+AC_SUBST(MINI_WRAPPER_CFLAGS)
+AC_SUBST(MINI_WRAPPER_LIBS)
+
 
 AC_SUBST(CFLAGS)
 
