--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -1,21 +1,28 @@
+libexec_PROGRAMS = mono-debugger-jit-wrapper mono-debugger-mini-wrapper
+
 INCLUDES = \
 	-DG_LOG_DOMAIN=\"MonoDebuggerJitWrapper\" \
 	@WRAPPER_CFLAGS@
 
-lib_LIBRARIES = libmonodebuggerwrapper.a
-
-libexec_PROGRAMS = mono-debugger-jit-wrapper
-
 mono_debugger_jit_wrapper_SOURCES = \
-	main.c
-
-mono_debugger_jit_wrapper_LDADD = \
-	libmonodebuggerwrapper.a	\
-	@WRAPPER_LIBS@
-
-libmonodebuggerwrapper_a_SOURCES = \
+	main.c				\
 	wrapper.c			\
 	thread-manager.c		\
 	icall.c				\
 	mono-debugger-jit-wrapper.h
+
+mono_debugger_jit_wrapper_LDADD = \
+	@WRAPPER_LIBS@
+
+mono_debugger_mini_wrapper_SOURCES = \
+	mini-main.c			\
+	wrapper.c			\
+	thread-manager.c		\
+	icall.c				\
+	mono-debugger-jit-wrapper.h
+
+mono_debugger_mini_wrapper_LDADD = \
+	@MINI_WRAPPER_LIBS@
+
+
 
