--- a/widgets/sources/debuggerwidgets/Makefile.am
+++ b/widgets/sources/debuggerwidgets/Makefile.am
@@ -16,6 +16,8 @@ $(libdebuggerwidgets_la_SOURCES): $(BUILD_SOURCES)
 libdebuggerwidgets_la_SOURCES = \
 	debuggerentry.c			\
 	debuggerentry.h			\
+	debuggerterminal.c		\
+	debuggerterminal.h		\
 	debuggerwidgets-marshal.c	\
 	debuggerwidgets-marshal.h
 
