2003-04-27  Martin Baulig  <martin@ximian.com>
	Reworked the breakpoint code; we're now getting a callback from
	the JIT when a method containing a breakpoint is JITed instead of
	using the breakpoint trampoline.

	* backends/ILanguageBackend.cs (BreakpointHit): Removed.

	* backends/Debugger.cs (BreakpointHit): Removed.

	* classes/ModuleData.cs (EnableBreakpoint, DisableBreakpoint):
	Removed the ThreadGroup argument.

	* classes/BreakpointManager.cs
	(BreakpointManager.Handle): New public class.
	(InsertBreakpoint, RemoveBreakpoint, LookupBreakpoint): New public
	methods; this class is now responsible for actually inserting all
	breakpoints.

svn path=/trunk/debugger/; revision=14057

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,7 @@
 bin_SCRIPTS = Interpreter.exe @GUI_TARGETS@ mdb mono-debug 
 
+MCS_FLAGS = -g
+
 assdir = $(libdir)
 
 ass_SCRIPTS = Mono.Debugger.dll Mono.Debugger.Backend.dll 
