2003-05-04  Martin Baulig  <martin@ximian.com>
	* configure.in: Dropped support for the old JIT, alwasy use Mini.

svn path=/trunk/debugger/; revision=14247

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -1,18 +1,8 @@
-libexec_PROGRAMS = mono-debugger-jit-wrapper mono-debugger-mini-wrapper
+libexec_PROGRAMS = mono-debugger-mini-wrapper
 
 INCLUDES = \
 	-DG_LOG_DOMAIN=\"MonoDebuggerJitWrapper\" \
 	@WRAPPER_CFLAGS@
-
-mono_debugger_jit_wrapper_SOURCES = \
-	main.c				\
-	wrapper.c			\
-	thread-manager.c		\
-	icall.c				\
-	mono-debugger-jit-wrapper.h
-
-mono_debugger_jit_wrapper_LDADD = \
-	@WRAPPER_LIBS@
 
 mono_debugger_mini_wrapper_SOURCES = \
 	mini-main.c			\
@@ -22,7 +12,7 @@ mono_debugger_mini_wrapper_SOURCES = \
 	mono-debugger-jit-wrapper.h
 
 mono_debugger_mini_wrapper_LDADD = \
-	@MINI_WRAPPER_LIBS@
+	@WRAPPER_LIBS@
 
 
 
