It's now called mono.debugger.gui-sharp.dll.
svn path=/trunk/debugger/; revision=15195

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -56,7 +56,7 @@ DEPS = \
 	-r Mono.Debugger.dll	\
 	-r Mono.Debugger.Backend.dll			\
 	-r ../widgets/gtk/gtksourceview-sharp.dll	\
-	-r ../widgets/mono.debugger.gui/debugger-widgets.dll
+	-r ../widgets/mono.debugger.gui/mono.debugger.gui-sharp.dll
 
 INTERPRETER_DEPS = \
 	-r Mono.GetOptions	\
