Make this actually work.
svn path=/trunk/debugger/; revision=15373

--- a/widgets/mono.debugger.gui/Makefile.am
+++ b/widgets/mono.debugger.gui/Makefile.am
@@ -7,7 +7,7 @@ ass_SCRIPTS = mono.debugger.gui-sharp.dll
 all: mono.debugger.gui-sharp.dll
 
 mono.debugger.gui-sharp.dll: @srcdir@/generated/*.cs
-	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -r gdk-sharp.dll -r gtksourceview-sharp -o mono.debugger.gui-sharp.dll --recurse '@srcdir@/*.cs'
+	$(MCS) --unsafe --target library -L $(GTKSHARP_PREFIX)/lib -r glib-sharp.dll -r gtk-sharp.dll -r gdk-sharp.dll -r ../gtk/gtksourceview-sharp.dll -o mono.debugger.gui-sharp.dll --recurse '@srcdir@/*.cs'
 
 clean:
 	rm -f *.dll
