--- a/arch/bfd/configure.in
+++ b/arch/bfd/configure.in
@@ -34,9 +34,9 @@ dnl to call AC_CHECK_PROG.
 AC_CHECK_TOOL(AR, ar)
 AC_CHECK_TOOL(RANLIB, ranlib, :)
 
-dnl Default to a non shared library.  This may be overridden by the
-dnl configure option --enable-shared.
-AM_DISABLE_SHARED
+dnl We need to build a shared library for the debugger.
+AM_ENABLE_SHARED
+AM_DISABLE_STATIC
 
 AM_PROG_LIBTOOL
 
@@ -54,13 +54,6 @@ AC_ARG_ENABLE(targets,
             ;;
   no)       enable_targets= ;;
   *)        enable_targets=$enableval ;;
-esac])dnl
-AC_ARG_ENABLE(commonbfdlib,
-[  --enable-commonbfdlib   build shared BFD/opcodes/libiberty library],
-[case "${enableval}" in
-  yes) commonbfdlib=true ;;
-  no)  commonbfdlib=false ;;
-  *)   AC_MSG_ERROR([bad value ${enableval} for BFD commonbfdlib option]) ;;
 esac])dnl
 AC_ARG_WITH(mmap,
 [  --with-mmap             try using mmap for BFD input files if available],
@@ -108,9 +101,6 @@ bfd_default_target_size=32
 # host stuff:
 
 AC_PROG_CC
-
-ALL_LINGUAS="fr tr ja es sv da"
-CY_GNU_GETTEXT
 
 # Permit host specific settings.
 . ${srcdir}/configure.host
@@ -427,34 +417,6 @@ fi
 # Horrible hacks to build DLLs on Windows.
 WIN32LDFLAGS=
 WIN32LIBADD=
-case "${host}" in
-*-*-cygwin*)
-  if test "$enable_shared" = "yes"; then
-    WIN32LDFLAGS="-no-undefined"
-    WIN32LIBADD="-L`pwd`/../libiberty -liberty -L`pwd`/../intl -lintl -lcygwin -lkernel32"
-  fi
-  ;;
-*-*-linux*)
-  # We borrow WIN32LIBADD so that the shared libbfd won't depend on
-  # libiberty.a.
-  case "${host}" in
-  mips*-*-linux*)
-    # Linux/MIPS uses PIC by default.
-    if test "$enable_shared" = "yes"; then
-      WIN32LIBADD="-L../libiberty -liberty"
-    fi
-    ;;
-  *)
-changequote(,)dnl
-    x=`sed -n -e 's/^[ 	]*PICFLAG[ 	]*=[ 	]*//p' < ../libiberty/Makefile | sed -n '$p'`
-changequote([,])dnl
-    if test -n "$x"; then
-      WIN32LIBADD="-L../libiberty/pic -liberty"
-    fi
-  ;;
-  esac
-  ;;
-esac
 AC_SUBST(WIN32LDFLAGS)
 AC_SUBST(WIN32LIBADD)
 
