2003-06-30  Martin Baulig  <martin@ximian.com>
	* arch/bfd: Imported from binutils 2.13.2.
	* arch/libiberty: Likewise.

	* arch/Makefile.am: We now build a minimal libbfd here and include
	it in the libmonodebuggerbfdglue.la.

svn path=/trunk/debugger/; revision=15765

--- a/arch/Makefile.am
+++ b/arch/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = opcodes
+SUBDIRS = libiberty bfd opcodes
 
 lib_LTLIBRARIES = libmonodebuggerbfdglue.la
 
@@ -7,7 +7,12 @@ libmonodebuggerbfdglue_la_SOURCES = \
 	bfdglue.h		\
 	#
 
-libmonodebuggerbfdglue_la_LIBADD = opcodes/libopcodes.la @BASE_DEPENDENCIES_LIBS@ -lbfd 
+libmonodebuggerbfdglue_la_LIBADD = opcodes/libopcodes.la bfd/libbfd.la @BASE_DEPENDENCIES_LIBS@
+
+noinst_PROGRAMS = testbfd
+
+testbfd_SOURCES = testbfd.c
+testbfd_LDADD = libmonodebuggerbfdglue.la
 
 INCLUDES = -I$(srcdir)/opcodes @BASE_DEPENDENCIES_CFLAGS@
 
