--- a/configure.in
+++ b/configure.in
@@ -10,6 +10,27 @@ AC_PROG_CC
 AM_PROG_CC_STDC
 AC_PROG_INSTALL
 
+build_warnings="-W -Wall -Wstrict-prototypes -Wmissing-prototypes"
+AC_ARG_ENABLE(build-warnings,
+[  --enable-build-warnings Enable build-time compiler warnings if gcc is used],
+[case "${enableval}" in
+  yes)	;;
+  no)	build_warnings="-w";;
+  ,*)   t=`echo "${enableval}" | sed -e "s/,/ /g"`
+        build_warnings="${build_warnings} ${t}";;
+  *,)   t=`echo "${enableval}" | sed -e "s/,/ /g"`
+        build_warnings="${t} ${build_warnings}";;
+  *)    build_warnings=`echo "${enableval}" | sed -e "s/,/ /g"`;;
+esac
+if test x"$silent" != x"yes" && test x"$build_warnings" != x""; then
+  echo "Setting warning flags = $build_warnings" 6>&1
+fi])dnl
+WARN_CFLAGS=""
+if test "x${build_warnings}" != x && test "x$GCC" = xyes ; then
+    WARN_CFLAGS="${build_warnings}"
+fi
+AC_SUBST(WARN_CFLAGS)
+
 AC_MSG_CHECKING([host platform characteristics])
 case "$host" in
 	*-*-linux*)
@@ -37,6 +58,11 @@ fi
 AC_SUBST(CC_FOR_BUILD)
 AC_SUBST(HOST_CC)
 AC_SUBST(BUILD_EXEEXT)
+
+dnl These must be called before AM_PROG_LIBTOOL, because it may want
+dnl to call AC_CHECK_PROG.
+AC_CHECK_TOOL(AR, ar)
+AC_CHECK_TOOL(RANLIB, ranlib, :)
 
 # Set STDC_HEADERS
 AC_HEADER_STDC
@@ -197,6 +223,16 @@ else
 fi
 AC_SUBST(READLINE_DEPLIBS)
 
+dnl
+dnl BFD checks
+dnl
+
+AC_CHECK_HEADERS(stddef.h string.h strings.h stdlib.h time.h unistd.h)
+AC_CHECK_HEADERS(fcntl.h sys/file.h sys/time.h)
+AC_HEADER_TIME
+AC_HEADER_DIRENT
+AC_CHECK_FUNCS(fcntl getpagesize setitimer sysconf fdopen getuid getgid)
+
 AC_OUTPUT([
 Makefile
 interfaces/Makefile
@@ -222,7 +258,9 @@ frontends/scripting/Makefile
 frontends/command-line/Makefile
 frontends/gui/Makefile
 arch/Makefile
+arch/libiberty/Makefile
 arch/opcodes/Makefile
+arch/bfd/Makefile
 test/Makefile
 doc/Makefile
 ])
