--- a/arch/libiberty/Makefile.am
+++ b/arch/libiberty/Makefile.am
@@ -8,4 +8,4 @@ noinst_LTLIBRARIES = libiberty.la
 libiberty_la_SOURCES = \
 	concat.c hashtab.c hex.c objalloc.c safe-ctype.c \
 	xexit.c xmalloc.c xstrerror.c
-libiberty_la_LDFLAGS = -release $(VERSION)
+libiberty_la_LDFLAGS = -export-dynamic
