--- a/arch/opcodes/Makefile.am
+++ b/arch/opcodes/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = libopcodes.la
 
-INCLUDES = -D_GNU_SOURCE -I. -I$(srcdir)
+INCLUDES = -D_GNU_SOURCE -DARCH_i386 -I$(srcdir)/../bfd -I$(srcdir)/../bfd/include
 
 libopcodes_la_SOURCES =  dis-buf.c disassemble.c i386-dis.c
 libopcodes_la_LDFLAGS = -export-dynamic
