2003-07-05  Martin Baulig  <martin@ximian.com>
	Released version 0.4 "New York City" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=15943

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,10 +7,10 @@ debugger = '$(MONO) ../lib/Interpreter.exe'
 
 test_FILES = TestManagedTypes.exe TestLexicalScopes.exe
 
-EXTRA_DIST = @srcdir@/*.cs
+EXTRA_DIST = @srcdir@/*.cs runtest.pl
 
 %.exe:%.cs
-	$(MCS) $(MCS_FLAGS) $<
+	$(MCS) $(MCS_FLAGS) -o $@ $<
 
 CLEANFILES = *.exe *.dbg a.out
 
