--- a/configure.in
+++ b/configure.in
@@ -151,7 +151,7 @@ AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
 MONO_REQUIRED_VERSION=0.25
-PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION)
+PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION gthread-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(WRAPPER_CFLAGS)
 AC_SUBST(WRAPPER_LIBS)
 
