2003-11-06  Martin Baulig  <martin@ximian.com>
	* configure.in: Completely disable the GUI for the moment.

svn path=/trunk/debugger/; revision=19681

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,4 +1,4 @@
-bin_SCRIPTS = Interpreter.exe @GUI_TARGETS@ mdb mono-debug 
+bin_SCRIPTS = Interpreter.exe mdb mono-debug 
 
 MCS_FLAGS = -g
 
@@ -9,11 +9,6 @@ ass_SCRIPTS = Mono.Debugger.dll Mono.Debugger.Backend.dll
 noinst_SCRIPTS = SymbolFileReader.exe
 
 EXTRA_SCRIPTS = Debugger.exe
-
-ALL_SRCLIST = \
-	@top_srcdir@/frontends/gui/*.cs			\
-	@top_srcdir@/frontends/scripting/*.cs		\
-	@top_srcdir@/frontends/command-line/Interpreter.cs
 
 INTERPRETER_SRCLIST = \
 	@top_srcdir@/frontends/command-line/*.cs	\
@@ -42,22 +37,6 @@ BACKEND_DEPS = \
 	-r Mono.Debugger.dll	\
 	-r Mono.CSharp.Debugger
 
-DEPS = \
-	-r glib-sharp.dll	\
-	-r pango-sharp.dll	\
-	-r atk-sharp.dll	\
-	-r gdk-sharp.dll	\
-	-r gtk-sharp.dll	\
-	-r gnome-sharp.dll	\
-	-r glade-sharp.dll	\
-	-r System.Drawing	\
-	-r Mono.GetOptions	\
-	-r Mono.CSharp.Debugger	\
-	-r Mono.Debugger.dll	\
-	-r Mono.Debugger.Backend.dll			\
-	-r ../widgets/gtk/gtksourceview-sharp.dll	\
-	-r ../widgets/mono.debugger.gui/mono.debugger.gui-sharp.dll
-
 INTERPRETER_DEPS = \
 	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger	\
@@ -68,23 +47,11 @@ SYMFILE_READER_DEPS = \
 	-r Mono.GetOptions	\
 	-r Mono.CSharp.Debugger
 
-GUIDIR = @top_srcdir@/frontends/gui
-RESOURCES = \
-	-resource:$(GUIDIR)/debugger.glade,debugger.glade	\
-	-resource:$(GUIDIR)/step-into.png,step-into.png		\
-	-resource:$(GUIDIR)/step-over.png,step-over.png		\
-	-resource:$(GUIDIR)/mono.png,mono.png			\
-	-resource:$(GUIDIR)/stop.png,stop.png			\
-	-resource:$(GUIDIR)/line.png,line.png
-
 Mono.Debugger.dll: $(LIBRARY_SRCLIST)
 	$(MCS) /target:library /out:Mono.Debugger.dll $(MCS_FLAGS) $(LIBRARY_DEPS) $(LIBRARY_SRCLIST)
 
 Mono.Debugger.Backend.dll: $(BACKEND_SRCLIST) Mono.Debugger.dll
 	$(MCS) /target:library /out:Mono.Debugger.Backend.dll $(MCS_FLAGS) $(BACKEND_DEPS) $(BACKEND_SRCLIST)
-
-Debugger.exe: $(ALL_SRCLIST) Mono.Debugger.dll Mono.Debugger.Backend.dll $(GUIDIR)/debugger.glade
-	$(MCS) -o Debugger.exe $(DEPS) $(ALL_SRCLIST) $(RESOURCES) $(MCS_FLAGS)
 
 Interpreter.exe: $(INTERPRETER_SRCLIST) Mono.Debugger.dll Mono.Debugger.Backend.dll
 	$(MCS) -o Interpreter.exe $(INTERPRETER_DEPS) $(INTERPRETER_SRCLIST) $(MCS_FLAGS)
