2003-12-15  Martin Baulig  <martin@ximian.com>
	* classes/GnuReadLine.cs: Check whether readline is supported and
	use Console.ReadLine() if not.

	* glue/Check whether readline is supported.

svn path=/trunk/debugger/; revision=21157

--- a/glue/Makefile.am
+++ b/glue/Makefile.am
@@ -12,6 +12,7 @@ libmonodebuggerreadline_la_SOURCES = \
 	mono-debugger-readline.h
 
 libmonodebuggerreadline_la_LIBADD = @BASE_DEPENDENCIES_LIBS@ @READLINE_DEPLIBS@
+libmonodebuggerreadline_la_LDFLAGS = -no-undefined -module -export-dynamic -shared
 
 INCLUDES = @BASE_DEPENDENCIES_CFLAGS@ @glue_cflags@
 
