2003-12-25  Martin Baulig  <martin@ximian.com>
	* backends/server/: Removed the `InferiorInfo' vtable; call the
	functions directly.

	* backends/server/library.c: Removed.

	* backends/server/i386-ptrace.c: Call functions
	`mono_debugger_server_*' and make them public.

svn path=/trunk/debugger/; revision=21490

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -5,14 +5,15 @@ lib_LTLIBRARIES = libmonodebuggerserver.la
 EXTRA_libmonodebuggerserver_la_SOURCES = \
 	i386-linux-ptrace.c		\
 	i386-linux-ptrace.h		\
-	i386-freebsd-ptrace.c		\
-	i386-freebsd-ptrace.h		\
+	i386-win32.c			\
+	i386-win32.h			\
 	i386-arch.c			\
 	i386-arch.h			\
 	i386-ptrace.c
 
 libmonodebuggerserver_la_SOURCES = \
-	library.c		\
+	i386-arch.c		\
+	i386-ptrace.c		\
 	server.h		\
 	breakpoints.c		\
 	breakpoints.h		\
